intear-dex-management/tests/snapshots/dex_lifecycle__xyk_deploy_of_file_that_is_not_wasm.snap
---
source: intear-dex-management/tests/dex_lifecycle.rs
expression: "cli.transaction(\"slimedragon.near\",\n&[\"xyk\", \"deploy\", \"slimedragon.near\", \"use-file\",\nnot_wasm_path.to_str().unwrap()]).await.replace(wasm_directory.path().to_str().unwrap(),\n\"[TEMP]\")"
---
$ near-intear-dex-management xyk deploy slimedragon.near use-file [TEMP]/readme.txt network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk deploy slimedragon.near use-file [TEMP]/readme.txt network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send

Error:
   0: [TEMP]/readme.txt isn't a WebAssembly module
