intear-dex-management/tests/snapshots/dex_lifecycle__xyk_deploy_with_dex_option.snap
---
source: intear-dex-management/tests/dex_lifecycle.rs
expression: "cli.transaction(\"slimedragon.near\",\n&[\"xyk\", \"--dex\", \"slimedragon.near/xyk-test\", \"deploy\", \"slimedragon.near\",\n\"use-file\",\nxyk_wasm_path]).await.replace(xyk_wasm_path, \"[TEMP]/xyk_dex.wasm\")"
---
$ near-intear-dex-management xyk --dex slimedragon.near/xyk-test deploy slimedragon.near use-file [TEMP]/xyk_dex.wasm network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk --dex slimedragon.near/xyk-test deploy slimedragon.near use-file [TEMP]/xyk_dex.wasm network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send

Error:
   0: xyk deploy creates <signer>/<name>, so it doesn't take --dex

Suggestion: Name the dex with --name after deploy
