intear-dex-management/tests/snapshots/dex_lifecycle__xyk_init_when_initialized.snap
---
source: intear-dex-management/tests/dex_lifecycle.rs
expression: "cli.transaction(\"alice.near\",\n&[\"xyk\", \"--dex\", \"slimedragon.near/xyk-test\", \"init\", \"alice.near\"]).await"
---
$ near-intear-dex-management xyk --dex slimedragon.near/xyk-test init alice.near network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk --dex slimedragon.near/xyk-test init alice.near network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: slimedragon.near/xyk-test is already initialized

Suggestion: New code that changes its state layout deploys with `xyk deploy … --migrate`
